--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -267,7 +267,7 @@
         {{#if livereload}}
         <script type="text/javascript" src="http://localhost:3002/app-repl.js"></script>
         {{else}}
-        <script type="text/javascript" src="{{ path_to_root }}/js/app.js"></script>
+        <script type="text/javascript" src="{{ path_to_root }}js/app.js" charset="utf-8"></script>
         {{/if}}
 
         <!-- Custom JS scripts -->
